--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,122 +1,42 @@
-/* Global Layout Set-up */
-* { 
-  box-sizing: border-box;
-}
-  
-body {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  color: #222;
-  background: #f7f5f0;
-}
-/* Link Styles */
-
-a {
-  text-decoration: none;
-  color: hotpink;
-}
-a:hover {
-  color: #6633ff;
+#contact {
+  padding: 144px 0 150px;
 }
 
-/* Section Styles */
-
-.main-nav {
-  width: 100%;
-  background: black;
-  min-height: 30px;
-  padding: 10px;
-  position: fixed;
-  text-align: center;
-}
-.nav {
-  display: flex;
-  justify-content: space-around;
-  font-weight: 700;
+.contact {
   list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
-}
-.nav .name {
-  display: none;
-}
-.nav li {
-  padding: 5px 10px 10px 10px;
-}
-.nav a {
-  transition: all .5s;
-}
-.nav a:hover {
-  color: white
-}
-
-header {
-  text-align: center;
-  background: url("../images/portland.jpg")no-repeat bottom center ;
-  background-size: cover;
-  overflow: hidden;
-  padding-top: 60px;
-}
-header {
-  line-height: 1.5;
-}
-header .profile-image {
-  margin-top: 50px;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border: 3px solid white;
-  transition: all .5s;
-}
-header .profile-image:hover {
-  transform: scale(2.5) rotate(360deg);
-}
-.tag {
-  background-color: #000;
-  color: #bf40bf;
-  padding: 10px;
-  border-radius: 5px;
-  display: table;
-  margin: 10px auto;
-} 
-.location {
-  background-color: #000;
-  color: #bf40bf;
-}
-
-form {
   display: flex;
-  flex-direction: column;
+  margin: 0 0 0 -40px;
+  flex-wrap: wrap;
 }
 
-#contact-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh; /* Set the height of the container to the full viewport height */
-  padding-right: 200px;
-  padding-left: 200px;
+.contact input[type="text"] {
+  height: 80px;
+  padding: 0 27px;
 }
 
-#contact-form input[type="text"],
-#contact-form textarea {
+.contact input[type="text"],
+.contact textarea {
   width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  min-width: 100%;
+  border: 2px solid rgba(255, 255, 255, 0.15);
+  border-radius: 5px;
+  background-color: transparent !important;
+  outline: 0;
+  color: #fff;
 }
 
-#contact-form input[type="submit"] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.contact input[type="text"]:focus,
+.contact textarea:focus {
+  border-color: var(--mc1);
 }
 
+.contact li {
+  width: 50%;
+  padding-left: 40px;
+  margin-bottom: 40px;
+}
+
+.contact li.full {
+  width: 100%;
+}
 
