building style of contact page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,14 @@
     --hff: 'Heebo',sans-serif;
     --bff: 'Roboto', sans-serif;
   }
+
+  *,:after,:before {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box
+}
   
   body {
     font-family: var(--bff);
